--- a/labb-4/style.css
+++ b/labb-4/style.css
@@ -122,6 +122,11 @@ table .fa {
 table img {
     width: 50px;
 }
+table tfoot td{
+    background: #305A85;
+    font-weight: bold;
+    color: #fff;
+}
 form img {
     width: 30px;
 }
@@ -153,6 +158,17 @@ form img {
 }
 form span {
     padding: 10px;
+}
+a{
+    margin: 1em 0;
+    padding: 0.7em;
+    border-radius: 0.3em;
+    border: none;
+    font-weight: bold;
+    color: #FFF;
+    background-color: #55a5d2;
+    text-decoration: none;
+    font-size: 14px;
 }
 shop.css
 Visar shop.css.
