--- a/api/style.css
+++ b/api/style.css
@@ -205,3 +205,11 @@ form span {
     margin: 10px;
     padding: 5px;
 }
+#map{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+}
+    
+
